--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 17,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 18,
       "metadata": {
         "id": "zjCBk1BI8DC1"
       },
@@ -254,13 +254,13 @@
               "4  1025.2 -19.5   0.0    N   2.0  Guanyuan  "
             ]
           },
-          "execution_count": 2,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "guanyuan_df = pd.read_csv(\"https://raw.githubusercontent.com/marceloreis/HTI/master/PRSA_Data_20130301-20170228/PRSA_Data_Guanyuan_20130301-20170228.csv\")\n",
+        "guanyuan_df = pd.read_csv(\"data/PRSA_Data_Guanyuan_20130301-20170228.csv\")\n",
         "guanyuan_df.head()"
       ]
     },
@@ -282,7 +282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 19,
       "metadata": {
         "id": "ax-3tEjc9Cj1"
       },
@@ -332,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -359,7 +359,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -377,7 +377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -403,7 +403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -644,7 +644,7 @@
               "max       11.200000  "
             ]
           },
-          "execution_count": 6,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -686,7 +686,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 23,
       "metadata": {
         "id": "jVnYpprE9Evz"
       },
@@ -999,7 +999,7 @@
               "[2801 rows x 18 columns]"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1018,7 +1018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -1242,7 +1242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1261,7 +1261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -1288,7 +1288,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1326,7 +1326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
@@ -1439,7 +1439,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -2074,7 +2074,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 29,
       "metadata": {
         "id": "1swJUdAD8DC2"
       },
@@ -2133,7 +2133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 30,
       "metadata": {
         "id": "Go0lCsvO8DC2"
       },
@@ -2205,11 +2205,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
-        "guanyuan_df.to_csv(\"guantun_df_data.csv\", index=False)"
+        "guanyuan_df.to_csv(\"guanyuan_df_data.csv\", index=False, encoding='utf-8')"
       ]
     }
   ],
